# DemoRun

./: CMakeCache.txt  CMakeLists.txt  DemoRun  Makefile  README.md  cmake_install.cmake
includes/: APlayer.hpp  Board.hpp  Brain.hpp  Pawn.hpp  Tile.hpp  tools.hpp
includes/Players/: Claire.hpp  Damien.hpp  Robert.hpp  Sandra.hpp
sources/: APlayer.cpp  Board.cpp  Pawn.cpp  Tile.cpp  main.cpp
sources/Players/: Claire.cpp  Damien.cpp  Robert.cpp  Sandra.cpp
